<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivityFragment"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:id="@+id/quizLinearLayout">

   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="@string/question"
      android:id="@+id/questionNumberTextView"
      android:layout_gravity="center_horizontal"
      android:layout_marginBottom="@dimen/spacing"
      android:textColor="@color/white"/>

   <ImageView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:id="@+id/ImageView"
      android:layout_gravity="center"
      android:layout_marginBottom="@dimen/spacing"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:layout_weight="1"
      android:adjustViewBounds="true"
      android:contentDescription="@string/image_description"
      android:scaleType="fitCenter"/>

   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="@string/guess_fraction"
      android:id="@+id/guessCountryTextView"
      android:layout_gravity="center_horizontal"
      android:textColor="@color/white"/>

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row1LinearLayout">

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button2"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>
   </LinearLayout>

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row2LinearLayout">

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button3"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button4"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>
   </LinearLayout>

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row3LinearLayout">

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button5"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button6"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>
   </LinearLayout>

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row4LinearLayout">

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button7"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>

      <Button
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:text="New Button"
         android:id="@+id/button8"
         android:layout_weight="1"
         android:lines="2"
         style="@android:style/Widget.Material.Button.Colored"
         android:textColor="@color/button_text_color"/>
   </LinearLayout>

   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="Medium Text"
      android:id="@+id/answerTextView"
      android:layout_gravity="bottom|center_horizontal"
      android:gravity="center_horizontal"
      android:textSize="@dimen/answer_size"
      android:textStyle="bold"/>


</LinearLayout>
